Bug 1246045 - Throttle animations in out-of-view iframe. r=birtles

Before this change, we don't acend up frame tree across different documents,
but it's possible that subframe document is scrolled out in the parent document,
if there are animations in such subframes, we should throttle the animations
too.

The test case added here fails without this fix.

MozReview-Commit-ID: EdOEVEwomPc